skills/kubernetes-yaml/resources/statefulset-ref.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: <app>
  # namespace: ""           # Only include Namespace if the user spcified a namespace
  labels:
    app.kubernetes.io/name: <app>
    app.kubernetes.io/version: 1.0.0
spec:
  replicas: 1
  selector:                 # ALWAYS ust the same labels in metadata.labels, spec.selector and template.metadata.labels
    matchLabels:
      app.kubernetes.io/name: <app>
      app.kubernetes.io/version: 1.0.0
  



  revisionHistoryLimit: 10
  minReadySeconds: 0
  serviceName: ""
  podManagementPolicy: OrderedReady  # enum: OrderedReady, Parallel
  ordinals:
    start: 0
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  updateStrategy:
    type: RollingUpdate     # enum: OnDelete, RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: <app>
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - name: "<app>"
        image: ""
        imagePullPolicy: IfNotPresent
        # command: []                   # Don't override command unless necessary
        # args: []
        # workingDir: ""
        ports:
        - name: "http"                  # always name ports
          containerPort: 80
        resources:
          requests:
            cpu: "10m"
            memory: "128Mi"
          limits:
            # NEVER set CPU limits
            memory: "128Mi"         # Always set requests.memory = limits.memory
        livenessProbe:              # Always have livenessProbe and readinessProbe
          httpGet:
            path: "/healthz"
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: "/ready"
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        lifecycle: {}           # Avoid using LifeCycle Hooks unless there is a good reason
        securityContext:        # ALWAYS configure the SecurityContext
          # runAsUser: 1000     # Only set specific UID when required by the container
          # runAsGroup: 1000    # only set specific GID when required by the container
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            add: []
            drop:
            - "ALL"
          seccompProfile:
            type: RuntimeDefault  # -required- enum: Localhost, RuntimeDefault, Unconfined
          appArmorProfile:
            type: RuntimeDefault  # -required- enum: Localhost, RuntimeDefault, Unconfined
        # --- Volume Mounts ---
        volumeMounts:
        - name: "tmp"            # -required-
          mountPath: "/tmp"       # -required-
          readOnly: false     # Set Mountpaths to ReadOnly if you can
        # --- Misc Container ---
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File  # enum: FallbackToLogsOnError, File
          
      initContainers: []  # See `containers`
      ephemeralContainers: []  # See `containers`



      # ===== VOLUMES =====
      volumes:
        - name: ""
          emptyDir:
            medium: ""
            sizeLimit: ""
          hostPath:
            path: ""              # -required-
            type: ""              # enum: "", BlockDevice, CharDevice, Directory, DirectoryOrCreate, File, FileOrCreate, Socket
        
      # ===== SCHEDULING =====
      nodeSelector: {}
      affinity:
        nodeAffinity: {}
        podAffinity: {}
        podAntiAffinity: {}

      # ===== TOLERATIONS =====
      tolerations: {}
      # ===== TOPOLOGY SPREAD CONSTRAINTS =====
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule

      # ===== POD SECURITY CONTEXT =====
      securityContext:
        runAsNonRoot: true
        fsGroupChangePolicy: OnRootMismatch  # enum: Always, OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
        appArmorProfile:
          type: RuntimeDefault
        # runAsUser: 1000         # Only use specific UIDs and GIDs if required by the container image
        # runAsGroup: 1000
        # fsGroup: 1000
        # supplementalGroups:
        #   - 1000

      serviceAccountName: <app>   # Always create a new ServiceAccount for every Deployment
      automountServiceAccountToken: false
      

      # ===== MISC POD SPEC =====
      restartPolicy: Always       # enum: Always, Never, OnFailure
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
    - metadata:
        labels:
          app.kubernetes.io/name: <app>
          app.kubernetes.io/version: 1.0.0
      spec:
        accessModes:
        - ReadWriteOnce
        storageClassName: "local-path"
        resources:
          requests:
            storage: "1Gi"
        dataSourceRef: {}
