skills/kubernetes-yaml/resources/networkpolicy-ref.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: <app>-default-netpol
  # namespace: ""           # Only include Namespace if the user spcified a namespace
  labels:
    app.kubernetes.io/name: <app>
    app.kubernetes.io/version: 1.0.0
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
  # Allow Intra-Namespace traffic
  - from:
    - podSelector: {}  # Empty selector = All pods in namespace
  egress:
  # Allow outbound DNS
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  # Allow Intra-Namespace traffic
  - to:
    - podSelector: {}  # Empty selector = All pods in namespace
  
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: <app>-netpol
  # namespace: ""           # Only include Namespace if the user spcified a namespace
  labels:
    app.kubernetes.io/name: <app>
    app.kubernetes.io/version: 1.0.0
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: <app>
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock: {}
      namespaceSelector: {}
      podSelector: {}
    ports:
    - port: 80
  egress:
  - to:
    - ipBlock: {}
      namespaceSelector: {}
      podSelector: {}
    ports:
    - port: 80
